force-app/main/default/objects/E2CP__Variation_Criterion__c/E2CP__Variation_Criterion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Email to Case Premium Criteria</label>
</CustomObject>