force-app/main/default/objects/E2CP__Variation_Criterion__c/fields/E2CP__Operator__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Operator__c</fullName>
    <label>Operator</label>
    <length>16</length>
    <type>Text</type>
</CustomField>