force-app/main/default/objects/E2CP__Variation_Criterion__c/fields/E2CP__Type__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Type__c</fullName>
    <description>Type of this Criterion either &apos;Field Criterion&apos; or &apos;Inbound Address&apos;.</description>
    <label>Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>