force-app/main/default/objects/E2CP__Variation_Criterion__c/fields/E2CP__Value__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>